welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false;
           ^